sqlxo/tests/orm/derive/try/err/not_public.stderr
error: `Query` requires a `pub` struct
 --> tests/orm/derive/try/err/not_public.rs:7:33
  |
7 | #[derive(Debug, Clone, FromRow, Query)]
  |                                 ^^^^^
  |
  = note: this error originates in the derive macro `Query` (in Nightly builds, run with -Z macro-backtrace for more info)
